# DataStructuresProject2026

./: .gitignore  CMakeLists.txt  EE 3223_Final_Project_v2.html  LIBRARY.md  README.md  demo.cpp
docs/: data_structure_walkthrough.md  demo_script.md  presentation_guide.md  qa_sheet.md  structure.md  team_work_split.md
include/datastructures/: binary_search_tree.hpp  hash_table.hpp  linked_list.hpp  queue.hpp  stack.hpp
src/: main.cpp
src/book_manager/: library.cpp  library.hpp  main.cpp
src/datastructures/: binary_search_tree.cpp  hash_table.cpp  linked_list.cpp  queue.cpp  stack.cpp
test/: challenge_tests.cpp  test_main.cpp
